# tool_pathway_viewer

./: .gitignore  README.md  pyproject.toml  requirements.txt  shell.nix  uwsgi.ini
src/: app.py  manage.py
src/embed/: apps.py  urls.py  views.py
src/embed/templates/: embed.html  help.html
src/redirect/: views.py
src/tool_pathway_viewer/: asgi.py  local_settings.py.template  settings.py  urls.py  wsgi.py
