[project]
name = "tool-pathway-viewer"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "John Elizarraras", email = "elizarrj27@gmail.com" }]
dependencies = ["django>=3.2.5", "webcolors>=1.13", "requests>=2.31.0"]
readme = "README.md"
requires-python = ">= 3.7"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
